--- a/my-app/content/docs/使用指南/Zleap介绍/下载使用.mdx
+++ b/my-app/content/docs/使用指南/Zleap介绍/下载使用.mdx
@@ -3,48 +3,76 @@ title: 下载使用
 
 ---
 
-<div style={{ textAlign: 'justify' }}>
-
-Zleap 提供多平台版本，您可根据设备类型选择以下方式开始使用。
-
-</div>
+Zleap 提供多平台支持，你可以在网页、iOS 和 Android 设备上使用 Zleap。
 
 ## 网页版
 
-<div style={{ textAlign: 'justify' }}>
+直接访问 Zleap 官网，使用浏览器即可使用完整功能。
 
-无需安装，通过浏览器即可直接访问使用。
-
-- 访问地址：<a href="https://app.zleap.com.cn/" target="_blank" style={{color: '#1890ff', textDecoration: 'none'}}>app.zleap.com.cn</a>
-- 推荐浏览器：Chrome、Edge、Safari 或 Firefox 以获得最佳体验。
-
-</div>
+**推荐浏览器：**
+- Chrome（推荐）
+- Edge
+- Safari
+- Firefox
 
 ## iOS 版
 
-<div style={{ textAlign: 'justify' }}>
+### 下载方式
 
-支持 iPhone 与 iPad，可通过 App Store 安全下载。
+**App Store**  
+在 App Store 搜索"Zleap"，下载安装。
 
-- 下载方式一：在 App Store 中搜索“Zleap”并点击获取。
-- 下载方式二：识别下方二维码，跳转至下载页面获取。
-  ![iOS 下载二维码](/images/iOS下载二维码.png)
+**扫码下载**  
+使用 iPhone 相机扫描下方二维码，跳转到 App Store 下载。
 
- </div>
+<img src="/images/iOS下载二维码.png" alt="iOS下载二维码" width="200" style={{marginTop: '2px'}} />
+
+### 系统要求
+
+- iOS 14.0 或更高版本
+- iPhone、iPad 和 iPod touch 均支持
 
 ## Android 版
 
-<div style={{ textAlign: 'justify' }}>
+### 下载方式
 
-支持手机及平板设备，可通过 Google Play 下载。
+**应用商店**  
+在各大应用商店搜索"Zleap"，下载安装。
 
-- 下载方式一：在 Google Play 中搜索“Zleap”并进行安装。
-- 下载方式二：识别下方二维码，即可进入下载页面。
-  ![Android 下载二维码](/images/Android下载二维码.png)
+**扫码下载**  
+使用 Android 手机相机或扫码应用扫描下方二维码，下载安装包。
 
- </div>
+<img src="/images/Android下载二维码.png" alt="Android下载二维码" width="200" style={{marginTop: '2px'}} />
 
-## 补充说明
+### 系统要求
 
-- 请确保从官方渠道使用，以保证软件安全与最新版本。
-- 如在下载或使用过程中遇到问题，可联系客服或查看本文档获取帮助。
+- Android 8.0 或更高版本
+
+## 一体机版
+
+Zleap 一体机是专为企业设计的本地部署方案，支持完全离线运行，确保数据安全。
+
+**适用场景：**
+- 政府机构、金融机构等对数据安全要求高的组织
+- 需要处理敏感信息的企业
+- 需要大规模算力的团队
+
+**联系方式：**  
+如需了解一体机版本，请联系我们的销售团队。
+
+## 登录方式
+
+**手机号登录**  
+使用手机号注册并登录，支持短信验证码。
+
+**邮箱登录**  
+使用邮箱注册并登录，支持邮箱验证码。
+
+**第三方登录**  
+支持微信、飞书等第三方账号登录。
+
+## 数据同步
+
+所有平台的数据实时同步，你可以在任何设备上访问你的信息源、报告和对话记录。
+
+💡 **提示**：首次登录时，建议在网页版完成基础配置，然后在移动端使用。
