--- a/my-app/content/docs/实践教程/如何使用信息管理？/信息管理常见问题.mdx
+++ b/my-app/content/docs/实践教程/如何使用信息管理？/信息管理常见问题.mdx
@@ -3,4 +3,78 @@ title: 信息管理常见问题
 
 ---
 
-# 
+## 支持哪些文档格式？
+
+**Q：Zleap 支持上传哪些格式的文档？**
+
+A：目前支持以下格式：
+
+- PDF（.pdf）
+- Word（.docx）
+- PowerPoint（.pptx）
+- 文本文件（.txt）
+- Markdown（.md）
+
+单个文件大小不超过 50MB。
+
+## 信息源可以修改吗？
+
+**Q：创建信息源后，我可以修改内容吗？**
+
+A：可以。在 **信息源管理** 页面：
+
+1. 找到要修改的信息源
+2. 点击信息源卡片右上角的 `⋮` 按钮
+3. 选择 **编辑信息源**
+4. 修改名称、描述或重新上传文档
+5. 点击 **保存** 完成修改
+
+## 如何删除信息源？
+
+**Q：我不再需要某个信息源，如何删除？**
+
+A：在 **信息源管理** 页面：
+
+1. 找到要删除的信息源
+2. 点击信息源卡片右上角的 `⋮` 按钮
+3. 选择 **删除信息源**
+4. 确认删除
+
+⚠️ **注意**：删除信息源后，关联的报告任务、搜索助手和问答助手也会受到影响。
+
+## 信息源日志是什么？
+
+**Q：信息源日志有什么用？**
+
+A：信息源日志记录了信息源的采集状态：
+
+- 最近一次更新时间
+- 采集成功或失败的记录
+- 错误信息和原因
+- 采集的信息数量
+
+通过查看日志，你可以了解信息源是否正常工作，及时发现和解决问题。
+
+## RSS 信息源不更新怎么办？
+
+**Q：我创建了 RSS 信息源，但内容没有更新，怎么办？**
+
+A：可能的原因和解决方法：
+
+- 检查 RSS 链接是否有效，尝试在浏览器中打开
+- 查看信息源日志，了解具体错误信息
+- 检查更新频率设置，可能还没到更新时间
+- 有些网站的 RSS 更新不及时，可以手动触发更新
+
+## 如何查看信息源的内容？
+
+**Q：我想查看信息源中具体包含哪些内容，如何查看？**
+
+A：在 **信息源管理** 页面：
+
+1. 点击信息源卡片
+2. 进入信息源详情页
+3. 可以查看信息源的所有内容
+4. 支持搜索和筛选
+
+你也可以通过搜索助手或问答助手，查询信息源中的具体内容。
