--- a/my-app/content/docs/实践教程/如何使用信息管理？/信息管理是什么.mdx
+++ b/my-app/content/docs/实践教程/如何使用信息管理？/信息管理是什么.mdx
@@ -3,4 +3,20 @@ title: 信息管理是什么
 
 ---
 
-# 
+信息管理是 Zleap 的核心功能。它就像你的智能信息仓库，帮助你收集、整理和管理来自不同渠道的信息。
+
+通过信息管理，你可以：
+
+**创建信息源**  
+上传文档、添加 RSS 链接、连接飞书群或搜索引擎，将各类信息汇聚到 Zleap。
+
+**订阅公共频道**  
+订阅 Zleap 提供的公共信息频道，获取行业资讯、技术动态等高质量内容。
+
+**管理信息源**  
+查看、编辑、删除已创建的信息源，查看信息源日志，了解信息采集状态。
+
+**关联应用**  
+将信息源关联到报告助手、搜索助手或问答助手，让 AI 基于这些信息为你服务。
+
+信息管理是使用 Zleap 的第一步。只有建立了信息源，才能让 AI 为你生成报告、回答问题或进行深度搜索。
