--- a/my-app/content/docs/实践教程/如何使用信息管理？/创建独属信息源/通过RSS链接创建信息源.mdx
+++ b/my-app/content/docs/实践教程/如何使用信息管理？/创建独属信息源/通过RSS链接创建信息源.mdx
@@ -3,4 +3,49 @@ title: 通过RSS链接创建信息源
 
 ---
 
-# 
+通过 RSS 链接创建信息源，可以让 Zleap 自动订阅并同步网站、博客或新闻源的最新内容。这是获取实时信息的高效方式。
+
+## 操作步骤
+
+### 1. 进入信息管理
+
+登录 Zleap 后，点击首页的 **信息管理**，进入信息源管理页面。
+
+### 2. 创建信息源
+
+点击左侧菜单的 **创建信息源**，选择 **RSS 链接**。
+
+### 3. 输入 RSS 地址
+
+在输入框中粘贴 RSS 链接地址。
+
+**如何获取 RSS 链接？**
+- 许多网站和博客都提供 RSS 订阅功能，通常在页面底部或侧边栏可以找到 RSS 图标
+- 点击 RSS 图标，复制地址栏中的链接
+- 常见的 RSS 链接格式：`https://example.com/feed` 或 `https://example.com/rss`
+
+### 4. 填写信息
+
+**信息名称**  
+为这个信息源起一个易于识别的名称，例如"TechCrunch 科技新闻"。
+
+**更新频率**  
+设置 Zleap 检查更新的频率：
+- 每小时
+- 每 6 小时
+- 每天
+- 每周
+
+### 5. 提交信息
+
+填写完成后，点击 **提交信息** 按钮。
+
+系统将验证 RSS 链接的有效性，并开始同步内容。
+
+### 6. 关联应用
+
+信息提交成功后，将该信息源关联到 **报告助手**、**搜索助手** 或 **问答助手**。
+
+建议将 RSS 信息源关联到报告助手，并设置定时任务，定期生成最新资讯摘要。
+
+💡 **提示**：RSS 信息源会持续更新，适合用于追踪行业动态、竞品信息或技术博客。
