--- a/my-app/content/docs/实践教程/如何使用信息管理？/创建独属信息源/通过上传文档创建信息源.mdx
+++ b/my-app/content/docs/实践教程/如何使用信息管理？/创建独属信息源/通过上传文档创建信息源.mdx
@@ -3,4 +3,50 @@ title: 通过上传文档创建信息源
 
 ---
 
-# 
+上传文档是创建信息源最直接的方式。你可以将本地的 PDF、Word、PPT 等文档上传到 Zleap，让 AI 分析并提取关键信息。
+
+## 操作步骤
+
+### 1. 进入信息管理
+
+登录 Zleap 后，点击首页的 **信息管理**，进入信息源管理页面。
+
+### 2. 创建信息源
+
+点击左侧菜单的 **创建信息源**，选择 **文档上传**。
+
+### 3. 上传文档
+
+在上传页面中：
+
+- 点击 **选择文件**，从本地选择要上传的文档
+- 支持的格式：PDF、TXT、MD、DOCX、PPTX
+- 单个文件大小不超过 50MB
+
+### 4. 填写信息
+
+文件上传成功后，填写以下信息：
+
+**信息名称**  
+为这个信息源起一个易于识别的名称，例如"2024年市场分析报告"。
+
+**描述（可选）**  
+简要描述这个信息源的内容，方便后续管理。
+
+### 5. 提交信息
+
+填写完成后，点击右上方的 **提交信息** 按钮。
+
+系统将开始处理文档，提取关键信息并建立索引。
+
+### 6. 关联应用
+
+信息提交成功后，系统会弹出关联应用页面。选择你要使用的应用：
+
+- **报告助手**：基于文档生成报告
+- **搜索助手**：在文档中进行搜索
+- **问答助手**：向文档提问
+
+你也可以稍后在信息源管理页面中关联应用。
+
+💡 **提示**：上传的文档会被 AI 深度分析，建议上传结构清晰、内容完整的文档，以获得更好的效果。
