--- a/my-app/content/docs/实践教程/如何使用信息管理？/创建独属信息源/通过搜索引擎创建信息源.mdx
+++ b/my-app/content/docs/实践教程/如何使用信息管理？/创建独属信息源/通过搜索引擎创建信息源.mdx
@@ -3,4 +3,94 @@ title: 通过搜索引擎创建信息源
 
 ---
 
-# 
+通过搜索引擎创建信息源，可以让 Zleap 自动搜索并采集互联网上的相关信息。这是追踪行业动态、竞品信息的高效方式。
+
+## 操作步骤
+
+### 1. 进入信息管理
+
+登录 Zleap 后，点击首页的 **信息管理**，进入信息源管理页面。
+
+### 2. 创建信息源
+
+点击左侧菜单的 **创建信息源**，选择 **搜索引擎**。
+
+### 3. 配置搜索规则
+
+**信息名称**  
+为这个信息源起一个易于识别的名称，例如"AI 行业动态"。
+
+**搜索关键词**  
+输入你要搜索的关键词，支持多个关键词，用逗号分隔。
+
+**搜索示例：**
+- "人工智能, AI, 机器学习"
+- "竞品名称, 产品更新"
+- "行业趋势, 市场分析"
+
+**搜索范围**  
+选择搜索的网站范围：
+- 全网搜索
+- 指定网站（例如只搜索特定新闻网站）
+- 排除网站（例如排除社交媒体）
+
+**时间范围**  
+选择搜索结果的时间范围：
+- 最近 24 小时
+- 最近 7 天
+- 最近 30 天
+- 不限时间
+
+**更新频率**  
+设置 Zleap 执行搜索的频率：
+- 每小时
+- 每 6 小时
+- 每天
+- 每周
+
+### 4. 高级设置（可选）
+
+**语言**  
+选择搜索结果的语言（中文、英文、全部）。
+
+**结果数量**  
+设置每次搜索返回的结果数量（10-100）。
+
+**去重**  
+自动去除重复的搜索结果。
+
+### 5. 提交信息
+
+填写完成后，点击 **提交信息** 按钮。
+
+系统将开始执行搜索并采集信息。
+
+### 6. 关联应用
+
+信息提交成功后，将该信息源关联到 **报告助手**、**搜索助手** 或 **问答助手**。
+
+建议将搜索引擎信息源关联到报告助手，并设置定时任务，定期生成行业动态摘要。
+
+## 使用场景
+
+**行业动态追踪**  
+自动搜索并采集行业最新动态，生成行业资讯报告。
+
+**竞品监控**  
+搜索竞品相关信息，了解竞品的最新动态和市场反馈。
+
+**舆情监控**  
+搜索品牌相关信息，了解公众对品牌的评价和讨论。
+
+**技术追踪**  
+搜索特定技术的最新进展，了解技术趋势。
+
+## 使用技巧
+
+💡 **精准关键词**：使用精准的关键词，避免搜索结果过于宽泛。
+
+💡 **组合搜索**：使用多个关键词组合，提高搜索结果的相关性。
+
+💡 **定期优化**：根据搜索结果的质量，定期优化关键词和搜索范围。
+
+💡 **去重过滤**：开启去重功能，避免重复信息干扰。
