--- a/my-app/content/docs/实践教程/如何使用信息管理？/创建独属信息源/通过飞书群创建信息源.mdx
+++ b/my-app/content/docs/实践教程/如何使用信息管理？/创建独属信息源/通过飞书群创建信息源.mdx
@@ -3,4 +3,105 @@ title: 通过飞书群创建信息源
 
 ---
 
-# 
+通过连接飞书群创建信息源，可以让 Zleap 自动采集飞书群中的消息和文件，将团队沟通内容转化为可分析的信息资产。
+
+## 前提条件
+
+在创建飞书群信息源之前，你需要：
+
+- 拥有飞书账号
+- 是飞书群的成员或管理员
+- 获得飞书群的授权
+
+## 操作步骤
+
+### 1. 进入信息管理
+
+登录 Zleap 后，点击首页的 **信息管理**，进入信息源管理页面。
+
+### 2. 创建信息源
+
+点击左侧菜单的 **创建信息源**，选择 **飞书群**。
+
+### 3. 授权飞书
+
+首次使用需要授权 Zleap 访问你的飞书账号：
+
+- 点击 **授权飞书** 按钮
+- 跳转到飞书授权页面
+- 登录你的飞书账号
+- 确认授权
+
+### 4. 选择飞书群
+
+授权成功后，系统会显示你有权限访问的飞书群列表。
+
+选择你要创建信息源的飞书群。
+
+### 5. 配置采集规则
+
+**信息名称**  
+为这个信息源起一个易于识别的名称，例如"产品团队飞书群"。
+
+**采集内容**  
+选择要采集的内容类型：
+- 文字消息
+- 文件（文档、图片、视频等）
+- 链接
+- 全部
+
+**采集时间范围**  
+选择采集的时间范围：
+- 最近 7 天
+- 最近 30 天
+- 最近 90 天
+- 全部历史消息
+
+**更新频率**  
+设置 Zleap 检查更新的频率：
+- 实时（推荐）
+- 每小时
+- 每 6 小时
+- 每天
+
+### 6. 提交信息
+
+填写完成后，点击 **提交信息** 按钮。
+
+系统将开始采集飞书群中的消息和文件。
+
+### 7. 关联应用
+
+信息提交成功后，将该信息源关联到 **报告助手**、**搜索助手** 或 **问答助手**。
+
+建议将飞书群信息源关联到报告助手，并设置定时任务，定期生成团队沟通摘要。
+
+## 使用场景
+
+**团队沟通摘要**  
+自动生成团队沟通的每日/每周摘要，快速了解团队动态。
+
+**项目进度追踪**  
+从飞书群消息中提取项目进度信息，生成进度报告。
+
+**问题收集**  
+从飞书群中收集团队成员提出的问题和反馈，生成问题清单。
+
+**知识沉淀**  
+将飞书群中的讨论内容沉淀为知识库，方便后续查询。
+
+## 注意事项
+
+⚠️ **隐私保护**：Zleap 只会采集你有权限访问的飞书群内容，不会泄露给其他用户。
+
+⚠️ **权限管理**：如果你离开飞书群或权限被撤销，Zleap 将无法继续采集该群的消息。
+
+⚠️ **数据安全**：飞书群信息源支持完全离线运行（一体机版本），确保数据安全。
+
+## 使用技巧
+
+💡 **分群管理**：为不同的飞书群创建不同的信息源，方便分类管理。
+
+💡 **定时报告**：设置定时任务，每天早上生成昨日团队沟通摘要。
+
+💡 **关键词过滤**：在报告任务中设置关键词，只关注重要信息。
