--- a/my-app/content/docs/实践教程/如何使用信息管理？/通过公共频道订阅信息.mdx
+++ b/my-app/content/docs/实践教程/如何使用信息管理？/通过公共频道订阅信息.mdx
@@ -3,4 +3,80 @@ title: 通过公共频道订阅信息
 
 ---
 
-# 
+Zleap 提供了丰富的公共信息频道，涵盖行业资讯、技术动态、市场分析等高质量内容。通过订阅公共频道，你可以快速获取相关领域的最新信息。
+
+## 操作步骤
+
+### 1. 进入信息管理
+
+登录 Zleap 后，点击首页的 **信息管理**，进入信息源管理页面。
+
+### 2. 浏览公共频道
+
+点击左侧菜单的 **公共频道**，浏览 Zleap 提供的公共信息频道列表。
+
+你可以按照分类筛选，或使用搜索功能查找感兴趣的频道。
+
+### 3. 查看频道详情
+
+点击频道卡片，查看频道的详细信息：
+
+- 频道简介
+- 内容类型
+- 更新频率
+- 订阅人数
+
+### 4. 订阅频道
+
+找到你感兴趣的频道后，点击 **订阅** 按钮。
+
+订阅成功后，该频道的信息将自动同步到你的信息库中。
+
+### 5. 关联应用
+
+订阅成功后，你可以将该频道关联到 **报告助手**、**搜索助手** 或 **问答助手**，让 AI 基于这些信息为你服务。
+
+### 6. 管理订阅
+
+在 **我的信息源** 中，你可以查看已订阅的公共频道，随时取消订阅或重新配置。
+
+## 公共频道分类
+
+**科技资讯**  
+人工智能、区块链、云计算等前沿技术的最新动态。
+
+**行业分析**  
+金融、医疗、教育等各行业的市场分析和趋势报告。
+
+**产品设计**  
+优秀产品的设计案例、用户体验分析、设计方法论。
+
+**商业管理**  
+商业模式、战略管理、团队协作等管理知识。
+
+**学术研究**  
+前沿研究成果、学术论文摘要、科研动态。
+
+## 使用场景
+
+**行业追踪**  
+订阅相关行业的公共频道，定期生成行业动态报告。
+
+**学习成长**  
+订阅学习类频道，每天获取新知识，建立个人知识库。
+
+**竞品分析**  
+订阅竞品相关频道，了解竞品动态和市场反馈。
+
+**灵感来源**  
+订阅设计、创意类频道，获取灵感和创意。
+
+## 使用技巧
+
+💡 **定时报告**：将公共频道关联到报告助手并设置定时任务，定期获取最新资讯。
+
+💡 **多频道组合**：订阅多个相关频道，从不同角度了解同一主题。
+
+💡 **定期清理**：定期检查订阅列表，取消不再需要的频道，保持信息库整洁。
+
+💡 **推荐频道**：如果你发现优质的信息源，可以推荐给 Zleap 团队，我们会考虑将其加入公共频道。
