--- a/my-app/content/docs/实践教程/如何使用报告助手？/任务管理/编辑报告.mdx
+++ b/my-app/content/docs/实践教程/如何使用报告助手？/任务管理/编辑报告.mdx
@@ -3,4 +3,62 @@ title: 编辑报告
 
 ---
 
-# 
+创建报告任务后，你可以随时编辑任务配置，调整报告模板、提示词或执行方式。
+
+## 操作步骤
+
+### 1. 进入任务管理
+
+登录 Zleap 后，点击首页的 **报告助手**，进入报告助手页面。
+
+在左侧导航栏点击 **任务管理**，查看所有报告任务。
+
+### 2. 选择要编辑的任务
+
+找到你要编辑的报告任务，点击任务卡片右上角的 `⋮` 按钮。
+
+选择 **编辑任务**。
+
+### 3. 修改任务配置
+
+在编辑页面中，你可以修改：
+
+**任务名称**  
+修改报告任务的名称，方便识别。
+
+**信息源**  
+添加或删除信息源，调整报告的数据来源。
+
+**报告模板**  
+更换报告模板（卡片、长文、事项），改变报告的展示形式。
+
+**提示词**  
+修改提示词，调整报告的生成方向和重点。
+
+**报告风格**  
+选择不同的报告风格（专业、简洁、详细等）。
+
+**执行方式**  
+修改执行方式：
+- 单次立即执行：立即生成一次报告
+- 定时执行：按照设定的时间定期生成报告
+
+### 4. 保存修改
+
+修改完成后，点击 **保存** 按钮。
+
+系统将应用新的配置，下次生成报告时使用新的设置。
+
+### 5. 重新生成报告
+
+如果你想立即使用新配置生成报告，点击 **重新生成** 按钮。
+
+AI 将使用新的配置重新分析信息源并生成报告。
+
+## 使用技巧
+
+💡 **A/B 测试**：创建两个相同信息源但不同配置的任务，对比报告效果。
+
+💡 **逐步优化**：根据报告效果，逐步调整提示词和模板，找到最佳配置。
+
+💡 **保留历史**：编辑任务不会删除历史报告，你可以对比新旧报告的差异。
