--- a/my-app/content/docs/实践教程/如何使用报告助手？/报告助手常见问题.mdx
+++ b/my-app/content/docs/实践教程/如何使用报告助手？/报告助手常见问题.mdx
@@ -3,4 +3,62 @@ title: 报告助手常见问题
 
 ---
 
-# 
+## 报告生成失败怎么办？
+
+**Q：我创建了报告任务，但报告生成失败，怎么办？**
+
+A：报告生成失败可能有以下原因：
+
+- 信息源内容不足或格式不支持
+- 网络连接问题导致信息源无法访问
+- 报告模板与信息源类型不匹配
+
+**解决方法：**
+- 检查信息源是否正常，尝试重新上传或更新
+- 查看信息源日志，了解具体错误信息
+- 更换报告模板重新尝试
+- 联系客服获取技术支持
+
+## 如何修改已生成的报告？
+
+**Q：报告生成后，我想修改部分内容，可以吗？**
+
+A：目前报告生成后不支持直接编辑。但你可以：
+
+- 在报告详情页使用 AI 对话功能，针对特定内容进行提问和补充
+- 导出报告后，在本地进行编辑
+- 调整报告任务的提示词，重新生成报告
+
+## 定时任务如何设置？
+
+**Q：我想让 AI 每天自动生成报告，如何设置？**
+
+A：在创建报告任务时：
+
+1. 选择执行方式为 **定时执行**
+2. 设置执行频率：每天、每周或自定义
+3. 选择执行时间
+4. 点击创建，系统将按照设定的时间自动生成报告
+
+## 报告可以导出吗？
+
+**Q：生成的报告可以导出为 PDF 或 Word 吗？**
+
+A：可以。在报告详情页，点击右上角的 **导出** 按钮，选择导出格式：
+
+- PDF：适合打印和分享
+- Word：适合进一步编辑
+- Markdown：适合技术文档
+
+## 如何删除报告任务？
+
+**Q：我不再需要某个报告任务，如何删除？**
+
+A：在 **任务管理** 页面：
+
+1. 找到要删除的报告任务
+2. 点击任务卡片右上角的 `⋮` 按钮
+3. 选择 **删除任务**
+4. 确认删除
+
+⚠️ **注意**：删除任务后，该任务生成的所有报告也会被删除，且无法恢复。
