--- a/my-app/content/docs/实践教程/如何使用报告助手？/报告助手是什么.mdx
+++ b/my-app/content/docs/实践教程/如何使用报告助手？/报告助手是什么.mdx
@@ -3,4 +3,23 @@ title: 报告助手是什么
 
 ---
 
-# 
+报告助手是 Zleap 的智能报告生成工具。它就像你的私人分析师，自动从信息源中提取关键信息，生成结构化的报告。
+
+通过报告助手，你可以：
+
+**自动生成报告**  
+基于你创建的信息源，AI 自动分析并生成定制化报告，节省大量人工整理时间。
+
+**选择报告模板**  
+提供卡片模板、长文模板、事项模板等多种报告格式，满足不同场景需求。
+
+**定时执行任务**  
+设置定时任务，让 AI 定期生成报告，实时掌握信息动态。
+
+**管理报告任务**  
+查看、编辑、删除报告任务，查看报告生成状态和历史记录。
+
+**AI 对话**  
+在报告详情页，可以直接与 AI 对话，针对报告内容进行深度提问。
+
+报告助手让你从繁琐的信息搬运中解放出来，专注于分析和决策。
