--- a/my-app/content/docs/实践教程/如何使用报告助手？/报告总览.mdx
+++ b/my-app/content/docs/实践教程/如何使用报告助手？/报告总览.mdx
@@ -3,4 +3,58 @@ title: 报告总览
 
 ---
 
-# 
+报告总览页面展示了所有报告任务的状态和历史记录。你可以在这里快速了解报告生成情况，管理报告任务。
+
+## 页面布局
+
+### 左侧导航栏
+
+**任务管理**  
+显示所有报告任务列表，包括任务名称、状态和最近更新时间。
+
+**创建报告任务**  
+点击创建新的报告任务。
+
+### 中间内容区
+
+**报告卡片**  
+每个报告任务以卡片形式展示，包含：
+
+- 报告名称
+- 生成时间
+- 报告状态（生成中、已完成、失败）
+- 信息源数量
+- 报告模板类型
+
+**筛选和排序**  
+可以按照时间、状态、模板类型筛选报告，也可以按照时间或名称排序。
+
+### 右侧操作区
+
+**快速操作**  
+- 查看报告详情
+- 重新生成报告
+- 编辑报告任务
+- 删除报告任务
+
+## 报告状态说明
+
+**生成中**  
+AI 正在分析信息源并生成报告，通常需要几分钟时间。
+
+**已完成**  
+报告已成功生成，可以查看和导出。
+
+**失败**  
+报告生成失败，点击查看错误信息，并尝试重新生成。
+
+**待执行**  
+定时任务等待执行，会在设定的时间自动生成报告。
+
+## 使用技巧
+
+💡 **定期清理**：定期删除不再需要的报告任务，保持列表整洁。
+
+💡 **批量操作**：选中多个报告任务，可以批量删除或导出。
+
+💡 **收藏重要报告**：点击星标图标，将重要报告收藏，方便快速访问。
