--- a/my-app/content/docs/实践教程/如何使用报告助手？/报告模板选择/事项模板.mdx
+++ b/my-app/content/docs/实践教程/如何使用报告助手？/报告模板选择/事项模板.mdx
@@ -3,4 +3,51 @@ title: 事项模板
 
 ---
 
-# 
+事项模板以列表形式展示待办事项，适合任务管理和行动计划。每个事项包含具体的行动内容、优先级和截止时间。
+
+## 适用场景
+
+**会议待办事项**  
+将会议中讨论的待办事项整理成列表，明确责任人和截止时间。
+
+**项目任务清单**  
+将项目的各项任务整理成清单，跟踪执行进度。
+
+**问题跟踪**  
+将发现的问题整理成列表，逐项解决和验证。
+
+**学习计划**  
+将学习目标和任务整理成清单，逐步完成。
+
+## 事项结构
+
+每个事项通常包含：
+
+**事项标题**  
+简洁明了的事项描述。
+
+**详细说明**  
+事项的具体内容和要求。
+
+**优先级**  
+高、中、低三个级别，标识事项的重要性。
+
+**截止时间**  
+事项的完成期限。
+
+**责任人**  
+负责执行的人员（如果适用）。
+
+**状态**  
+待办、进行中、已完成三种状态。
+
+**来源**  
+标注事项的信息来源。
+
+## 使用技巧
+
+💡 **优先级排序**：按照优先级排序事项，先处理重要紧急的任务。
+
+💡 **定期更新**：定期更新事项状态，跟踪执行进度。
+
+💡 **导出清单**：导出事项清单，在项目管理工具中使用。
