--- a/my-app/content/docs/实践教程/如何使用报告助手？/报告模板选择/卡片模板.mdx
+++ b/my-app/content/docs/实践教程/如何使用报告助手？/报告模板选择/卡片模板.mdx
@@ -3,4 +3,45 @@ title: 卡片模板
 
 ---
 
-# 
+卡片模板以卡片形式展示关键信息，适合快速浏览和信息摘要。每张卡片包含一个独立的信息点，简洁明了。
+
+## 适用场景
+
+**每日资讯摘要**  
+将每天的新闻、行业动态整理成卡片，快速浏览重点信息。
+
+**竞品动态追踪**  
+将竞品的最新动态、产品更新整理成卡片，一目了然。
+
+**会议纪要**  
+将会议的关键决策、待办事项整理成卡片，方便后续跟进。
+
+**学习笔记**  
+将学习内容的核心要点整理成卡片，便于复习和记忆。
+
+## 卡片结构
+
+每张卡片通常包含：
+
+**标题**  
+简洁明了的标题，概括卡片内容。
+
+**摘要**  
+2-3 句话的核心内容摘要。
+
+**关键信息**  
+以列表形式展示关键信息点。
+
+**来源**  
+标注信息来源，支持溯源验证。
+
+**时间**  
+信息的发布或更新时间。
+
+## 使用技巧
+
+💡 **适合移动端**：卡片模板在手机上浏览体验更好，适合碎片化阅读。
+
+💡 **快速扫描**：卡片模板让你在几分钟内浏览大量信息，抓住重点。
+
+💡 **分类整理**：可以按照主题、时间或重要性对卡片进行分类。
