--- a/my-app/content/docs/实践教程/如何使用报告助手？/报告模板选择/长文模板.mdx
+++ b/my-app/content/docs/实践教程/如何使用报告助手？/报告模板选择/长文模板.mdx
@@ -3,4 +3,50 @@ title: 长文模板
 
 ---
 
-# 
+长文模板以长文形式展示详细分析，适合深度阅读和系统性报告。内容结构完整，逻辑清晰，适合打印和分享。
+
+## 适用场景
+
+**行业研究报告**  
+对行业趋势、竞争格局进行深度分析，生成完整的研究报告。
+
+**项目总结**  
+对项目的执行过程、成果和经验进行系统性总结。
+
+**技术文档**  
+将技术资料整理成完整的技术文档，包含背景、原理、实现和案例。
+
+**战略分析**  
+对市场机会、风险和战略选择进行深度分析，支持决策。
+
+## 长文结构
+
+长文模板通常包含：
+
+**摘要**  
+报告的核心观点和主要结论，2-3 段文字。
+
+**目录**  
+完整的章节目录，方便快速定位。
+
+**正文**  
+分章节展示详细内容，包括：
+- 背景介绍
+- 数据分析
+- 核心观点
+- 案例说明
+- 结论建议
+
+**附录**  
+补充资料、数据表格、参考文献等。
+
+**来源**  
+标注所有信息来源，支持溯源验证。
+
+## 使用技巧
+
+💡 **适合打印**：长文模板格式规范，适合导出为 PDF 打印或分享。
+
+💡 **系统阅读**：长文模板适合系统性阅读，建立完整的知识体系。
+
+💡 **引用方便**：长文模板有清晰的章节结构，方便引用和讨论。
