--- a/my-app/content/docs/实践教程/如何使用报告助手？/报告详情.mdx
+++ b/my-app/content/docs/实践教程/如何使用报告助手？/报告详情.mdx
@@ -3,4 +3,54 @@ title: 报告详情
 
 ---
 
-# 
+报告详情页面展示了完整的报告内容。你可以在这里查看报告、与 AI 对话、导出报告。
+
+## 页面布局
+
+### 左侧内容区
+
+**报告标题**  
+显示报告的名称和生成时间。
+
+**报告内容**  
+完整的报告内容，根据选择的模板格式化展示：
+
+- 卡片模板：以卡片形式展示关键信息
+- 长文模板：以长文形式展示详细分析
+- 事项模板：以列表形式展示待办事项
+
+**信息溯源**  
+报告中的关键信息会标注来源，点击可以查看原始文档。
+
+### 右侧对话区
+
+**AI 对话**  
+点击右侧的 AI 对话按钮，可以针对报告内容进行提问：
+
+- "这份报告的核心观点是什么？"
+- "能详细说明第三部分的内容吗？"
+- "有哪些值得关注的风险点？"
+
+AI 会基于报告内容和信息源，提供精准的回答。
+
+### 顶部操作栏
+
+**导出报告**  
+点击 **导出** 按钮，选择导出格式（PDF、Word、Markdown）。
+
+**分享报告**  
+点击 **分享** 按钮，生成分享链接，发送给团队成员。
+
+**重新生成**  
+点击 **重新生成** 按钮，使用最新的信息源重新生成报告。
+
+**编辑任务**  
+点击 **编辑** 按钮，修改报告任务的配置（模板、提示词等）。
+
+## 使用技巧
+
+💡 **使用 AI 对话**：如果报告内容不够详细，可以通过 AI 对话获取更多信息。
+
+💡 **溯源验证**：点击信息来源链接，验证报告内容的准确性。
+
+💡 **定期更新**：对于定时任务，定期查看最新报告，了解信息动态。
