--- a/my-app/content/docs/实践教程/如何使用搜索助手？/使用公共信息搜索.mdx
+++ b/my-app/content/docs/实践教程/如何使用搜索助手？/使用公共信息搜索.mdx
@@ -3,4 +3,66 @@ title: 使用公共信息搜索
 
 ---
 
-# 
+公共信息搜索让你无需创建信息源，即可搜索 Zleap 提供的公共信息库。公共信息库包含行业资讯、技术文档等高质量内容。
+
+## 操作步骤
+
+### 1. 进入搜索助手
+
+登录 Zleap 后，点击首页的 **搜索助手**，进入搜索助手页面。
+
+### 2. 选择公共信息搜索
+
+在搜索助手列表中，点击 **公共信息搜索**。
+
+### 3. 输入搜索内容
+
+在搜索框中输入你要搜索的内容，然后按回车或点击搜索按钮。
+
+**搜索示例：**
+- "人工智能最新进展"
+- "区块链技术应用案例"
+- "产品经理如何做竞品分析"
+- "Python 数据分析教程"
+
+### 4. 查看搜索结果
+
+AI 会返回最相关的搜索结果，包括：
+
+- 文章标题和摘要
+- 信息来源
+- 发布时间
+- 相关度评分
+
+### 5. 深入阅读
+
+点击搜索结果，可以查看完整的文章内容。
+
+如果结果不够满意，可以调整搜索词重新搜索。
+
+## 公共信息库内容
+
+公共信息库包含以下类型的内容：
+
+**行业资讯**  
+各行业的最新动态、市场分析、趋势报告。
+
+**技术文档**  
+编程语言、框架、工具的技术文档和教程。
+
+**学术论文**  
+前沿研究成果、学术论文摘要。
+
+**产品案例**  
+优秀产品的设计案例、用户体验分析。
+
+**商业分析**  
+商业模式、战略分析、管理方法。
+
+## 使用技巧
+
+💡 **快速入门**：如果你对某个领域不熟悉，可以先用公共搜索了解基础知识。
+
+💡 **对比学习**：搜索同一主题的多篇文章，对比不同观点和方法。
+
+💡 **保存结果**：将有价值的搜索结果保存到你的信息源，方便后续使用。
