--- a/my-app/content/docs/实践教程/如何使用搜索助手？/使用搜索助手搜索.mdx
+++ b/my-app/content/docs/实践教程/如何使用搜索助手？/使用搜索助手搜索.mdx
@@ -3,4 +3,45 @@ title: 使用搜索助手搜索
 
 ---
 
-# 
+使用搜索助手，你可以用自然语言描述你的需求，AI 会理解你的意图并返回最相关的结果。
+
+## 操作步骤
+
+### 1. 进入搜索助手
+
+登录 Zleap 后，点击首页的 **搜索助手**，进入搜索助手页面。
+
+### 2. 选择搜索助手
+
+在搜索助手列表中，点击你要使用的搜索助手。
+
+如果你还没有创建搜索助手，可以使用 **公共信息搜索**。
+
+### 3. 输入搜索内容
+
+在搜索框中输入你要搜索的内容，然后按回车或点击搜索按钮。
+
+**搜索技巧：**
+- 用自然语言描述你的需求，例如"如何提高产品转化率？"
+- 不需要精确的关键词，AI 会理解你的意图
+- 可以使用问句，例如"什么是 SAG 技术？"
+
+### 4. 查看搜索结果
+
+AI 会返回最相关的搜索结果，包括：
+
+- 相关文档片段
+- 信息来源
+- 相关度评分
+
+### 5. 深入查看
+
+点击搜索结果，可以查看完整的文档内容。
+
+如果结果不够满意，可以调整搜索词重新搜索。
+
+### 6. 关联分析
+
+搜索助手不仅返回匹配的信息，还会分析信息间的深层关联，帮助你发现隐藏的洞察。
+
+💡 **提示**：搜索助手支持语义理解，即使你的搜索词与文档中的词汇不完全匹配，AI 也能找到相关内容。
