--- a/my-app/content/docs/实践教程/如何使用搜索助手？/创建特定搜索助手.mdx
+++ b/my-app/content/docs/实践教程/如何使用搜索助手？/创建特定搜索助手.mdx
@@ -3,4 +3,45 @@ title: 创建特定搜索助手
 
 ---
 
-# 
+创建特定搜索助手，可以在你的私有信息库中进行精准搜索。与公共搜索不同，特定搜索助手只搜索你指定的信息源。
+
+## 操作步骤
+
+### 1. 准备信息源
+
+在创建搜索助手之前，你需要先创建信息源。可以通过以下方式创建：
+
+- 上传文档（PDF、Word、PPT 等）
+- 添加 RSS 链接
+- 连接飞书群
+- 使用搜索引擎
+
+### 2. 进入搜索助手
+
+登录 Zleap 后，点击首页的 **搜索助手**，进入搜索助手页面。
+
+### 3. 创建搜索助手
+
+点击 **创建搜索助手** 按钮。
+
+### 4. 选择信息源
+
+在弹出的页面中，选择你要关联的信息源。
+
+你可以选择一个或多个信息源，搜索助手会在这些信息源中进行搜索。
+
+### 5. 配置搜索助手
+
+**助手名称**  
+为搜索助手起一个易于识别的名称，例如"技术文档搜索"。
+
+**描述（可选）**  
+简要描述这个搜索助手的用途，方便后续管理。
+
+### 6. 创建完成
+
+点击 **创建** 按钮，系统将开始构建搜索助手。
+
+创建完成后，你就可以开始使用搜索助手了。
+
+💡 **提示**：特定搜索助手适合在大量文档中快速查找信息，例如在公司内部文档库、技术手册或研究资料中搜索。
