--- a/my-app/content/docs/实践教程/如何使用搜索助手？/搜索助手常见问题.mdx
+++ b/my-app/content/docs/实践教程/如何使用搜索助手？/搜索助手常见问题.mdx
@@ -3,4 +3,62 @@ title: 搜索助手常见问题
 
 ---
 
-# 
+## 搜索结果不准确怎么办？
+
+**Q：搜索助手返回的结果与我的需求不符，怎么办？**
+
+A：可以尝试以下方法：
+
+- 调整搜索词，使用更具体的描述
+- 使用问句形式，例如"如何提高转化率？"
+- 检查信息源是否包含相关内容
+- 使用特定搜索助手，而不是公共搜索
+
+## 公共搜索和特定搜索有什么区别？
+
+**Q：公共信息搜索和特定搜索助手有什么区别？**
+
+A：
+
+**公共信息搜索**
+- 搜索 Zleap 提供的公共信息库
+- 包含行业资讯、技术文档等高质量内容
+- 无需创建信息源即可使用
+
+**特定搜索助手**
+- 搜索你创建的私有信息源
+- 只返回你指定的信息源中的内容
+- 适合在公司内部文档、个人资料中搜索
+
+## 搜索助手支持哪些搜索方式？
+
+**Q：搜索助手支持哪些搜索方式？**
+
+A：搜索助手支持多种搜索方式：
+
+- 关键词搜索：输入关键词，返回包含该词的文档
+- 语义搜索：用自然语言描述需求，AI 理解意图后返回相关结果
+- 问句搜索：直接提问，AI 会找到能回答问题的文档
+
+## 如何提高搜索效率？
+
+**Q：如何更快地找到我需要的信息？**
+
+A：以下技巧可以提高搜索效率：
+
+- 使用具体的搜索词，避免过于宽泛
+- 创建多个特定搜索助手，按主题分类
+- 定期整理信息源，删除过时内容
+- 使用问句形式，让 AI 更好地理解你的需求
+
+## 搜索历史会保存吗？
+
+**Q：我的搜索历史会被保存吗？**
+
+A：是的。搜索助手会保存你的搜索历史，方便你：
+
+- 查看之前的搜索记录
+- 快速重复搜索
+- 分析搜索趋势
+
+你可以在搜索助手页面查看和管理搜索历史。
