--- a/my-app/content/docs/实践教程/如何使用搜索助手？/搜索助手是什么.mdx
+++ b/my-app/content/docs/实践教程/如何使用搜索助手？/搜索助手是什么.mdx
@@ -3,4 +3,20 @@ title: 搜索助手是什么
 
 ---
 
-# 
+搜索助手是 Zleap 的智能搜索工具。它不仅能快速检索信息，更能理解语义关联，为你呈现最相关的结果。
+
+通过搜索助手，你可以：
+
+**使用公共信息搜索**  
+直接搜索 Zleap 公共信息库，获取行业资讯、技术文档等高质量内容。
+
+**创建特定搜索助手**  
+基于你的信息源创建专属搜索助手，在你的私有信息库中进行精准搜索。
+
+**语义理解搜索**  
+不需要精确的关键词，用自然语言描述你的需求，AI 会理解你的意图并返回相关结果。
+
+**深度关联分析**  
+搜索助手不仅返回匹配的信息，还能分析信息间的深层关联，帮助你发现隐藏的洞察。
+
+搜索助手让你告别传统的关键词搜索，用对话的方式找到你需要的信息。
