--- a/my-app/content/docs/实践教程/如何使用问答助手？/创建专属问答助手.mdx
+++ b/my-app/content/docs/实践教程/如何使用问答助手？/创建专属问答助手.mdx
@@ -3,4 +3,45 @@ title: 创建专属问答助手
 
 ---
 
-# 
+创建专属问答助手，让 AI 成为你的私有知识库专家。基于你的信息源，问答助手可以回答各种问题，提供精准、可溯源的答案。
+
+## 操作步骤
+
+### 1. 准备信息源
+
+在创建问答助手之前，你需要先创建信息源。可以通过以下方式创建：
+
+- 上传文档（PDF、Word、PPT 等）
+- 添加 RSS 链接
+- 连接飞书群
+- 使用搜索引擎
+
+### 2. 进入问答助手
+
+登录 Zleap 后，点击首页的 **问答助手**，进入问答助手页面。
+
+### 3. 创建问答助手
+
+点击 **创建问答助手** 按钮。
+
+### 4. 选择信息源
+
+在弹出的页面中，选择你要关联的信息源。
+
+你可以选择一个或多个信息源，AI 会基于这些信息源回答问题。
+
+### 5. 配置问答助手
+
+**助手名称**  
+为问答助手起一个易于识别的名称，例如"产品文档问答助手"。
+
+**描述（可选）**  
+简要描述这个问答助手的用途，方便后续管理。
+
+### 6. 创建完成
+
+点击 **创建** 按钮，系统将开始构建问答助手。
+
+创建完成后，你就可以开始向问答助手提问了。
+
+💡 **提示**：问答助手的回答质量取决于信息源的质量。建议上传结构清晰、内容完整的文档，以获得更好的效果。
