--- a/my-app/content/docs/实践教程/如何使用问答助手？/问答助手是什么.mdx
+++ b/my-app/content/docs/实践教程/如何使用问答助手？/问答助手是什么.mdx
@@ -3,4 +3,20 @@ title: 问答助手是什么
 
 ---
 
-# 
+问答助手是 Zleap 的智能问答工具。它就像你的专属知识顾问，基于你的信息源回答问题，提供精准、可溯源的答案。
+
+通过问答助手，你可以：
+
+**创建专属问答助手**  
+基于你的信息源创建问答助手，让 AI 成为你的私有知识库专家。
+
+**自然语言提问**  
+用聊天的方式提问，无需学习复杂的查询语法，AI 会理解你的问题并给出答案。
+
+**答案可溯源**  
+每个答案都会标注信息来源，你可以追溯到原始文档，确保信息的真实性和准确性。
+
+**多轮对话**  
+支持连续提问，AI 会记住上下文，进行深度对话，帮助你全面理解问题。
+
+问答助手让你的数据像专家一样回答问题，从此不再被繁杂的文档搞得头晕脑胀。
