--- a/my-app/content/docs/使用指南/Zleap介绍/学习资源.mdx
+++ b/my-app/content/docs/使用指南/Zleap介绍/学习资源.mdx
@@ -3,73 +3,78 @@ title: 学习资源
 
 ---
 
-<div style={{ textAlign: 'justify' }}>
+Zleap 提供了丰富的学习资源，帮助你更好地使用产品，了解 AI 技术，提升工作效率。
 
-Zleap 为您提供各种有用的学习资源，帮助您尽快熟悉产品，挖掘优质信息，赋能决策。
+## 官方文档
 
-</div>
+**帮助中心**  
+完整的产品使用文档，涵盖所有功能的详细说明和操作指南。
 
-## 使用教程
+**新手教程**  
+互动式新手教程，5 分钟快速上手 Zleap。
 
-<div style={{ textAlign: 'justify' }}>
+**视频教程**  
+视频演示各项功能的使用方法，更直观易懂。
 
-通过本文档教程，了解如何挖掘获取优质信息：
+**常见问题**  
+汇总用户常见问题和解决方案，快速找到答案。
 
-- 快速使用：<a href="/docs/使用指南/5分钟快速上手" style={{color: '#1890ff',textDecoration: 'none',fontWeight: 500}}>5分钟快速上手</a>
-- 创建信息源：<a href="/docs/实践教程/如何使用信息管理？/创建独属信息源/通过上传文档创建信息源" style={{color: '#1890ff',textDecoration: 'none',fontWeight: 500}}>通过上传文档创建信息源</a>
-- 生成报告：<a href="/docs/实践教程/如何使用报告助手？/创建报告任务" style={{color: '#1890ff',textDecoration: 'none',fontWeight: 500}}>创建报告任务</a>
-- AI问答：<a href="/docs/实践教程/如何使用问答助手？/使用专属问答助手" style={{color: '#1890ff',textDecoration: 'none',fontWeight: 500}}>使用专属问答助手</a>
-- AI搜索：<a href="/docs/实践教程/如何使用搜索助手？/使用公共信息搜索" style={{color: '#1890ff',textDecoration: 'none',fontWeight: 500}}>使用公共信息搜索</a>
+## 社区资源
 
-</div>
+**官方微信公众号**  
+关注官方微信公众号，获取最新产品动态、使用技巧和行业资讯。
 
-## 在线平台
+<img src="/images/微信公众号二维码.jpg" alt="微信公众号二维码" width="200" style={{marginTop: '2px'}} />
 
-- 官方网址：<a href="https://www.zleap.com.cn/" target="_blank" style={{color: '#1890ff', textDecoration: 'none'}}>zleap.com.cn</a>
-- 国内平台
-<div style={{margin: 0, padding: 0}}>
-  <div style={{
-    display: 'flex',
-    justifyContent: 'flex-start',
-    gap: '30px',
-    margin: '0 0 0 15px'
-  }}>
-    <div style={{textAlign: 'center'}}>
-      <div style={{marginBottom: '0'}}>微信公众号</div>
-      <img src="/images/微信公众号二维码.jpg" alt="微信公众号二维码" style={{width: '175px', height: 'auto', marginTop: '0'}} />
-    </div>
-    <div style={{textAlign: 'center'}}>
-      <div style={{marginBottom: '0'}}>小红书</div>
-      <img src="/images/小红书二维码.png" alt="小红书二维码" style={{width: '175px', height: 'auto', marginTop: '0'}} />
-    </div>
-  </div>
-</div>
-- 国外平台
+**企业微信群**  
+加入企业微信群，与其他用户交流使用经验，获取官方支持。
 
-  Facebook：<a href="https://www.facebook.com/zleapai" target="_blank" style={{color: '#1890ff', textDecoration: 'none'}}>facebook.com/zleapai</a>
+<img src="/images/企业微信群二维码.png" alt="企业微信群二维码" width="200" style={{marginTop: '2px'}} />
 
-  X(Twitter)：<a href="https://x.com/zleapai" target="_blank" style={{color: '#1890ff', textDecoration: 'none'}}>x.com/zleapai</a>
+**小红书**  
+关注 Zleap 小红书账号，查看用户分享的使用案例和技巧。
+
+<img src="/images/小红书二维码.png" alt="小红书二维码" width="200" style={{marginTop: '2px'}} />
+
+## 技术博客
+
+**Zleap 技术博客**  
+了解 Zleap 背后的技术原理，学习 AI 技术知识。
+
+**SAG 技术解析**  
+深入了解 Zleap 自研的 SAG 技术框架。
+
+**最佳实践**  
+学习其他用户的最佳实践，优化你的使用方式。
+
+## 在线课程
+
+**基础课程**  
+从零开始学习 Zleap，掌握基本功能。
+
+**进阶课程**  
+学习高级功能和技巧，提升使用效率。
+
+**行业应用课程**  
+针对不同行业的应用场景，提供定制化的学习内容。
+
+## 客户案例
+
+**成功案例**  
+了解其他企业和个人如何使用 Zleap，获取灵感。
+
+**行业解决方案**  
+查看针对不同行业的解决方案和应用场景。
 
 ## 联系我们
 
-<div style={{ textAlign: 'justify' }}>
+**客服支持**  
+遇到问题？联系我们的客服团队，获取及时帮助。
 
-您可识别官方微信群二维码，加入官方用户群交流心得；或添加企业微信联系专属客服，获得更多支持。
-<div style={{margin: 0, padding: 0}}>
-  <div style={{
-    display: 'flex',
-    justifyContent: 'flex-start',
-    gap: '30px',
-    margin: '0 0 0 15px'
-  }}>
-    <div style={{textAlign: 'center'}}>
-      <div style={{marginBottom: '0'}}>官方微信</div>
-      <img src="/images/官方微信二维码.jpg" alt="官方微信二维码" style={{width: '175px', height: 'auto', marginTop: '0'}} />
-    </div>
-    <div style={{textAlign: 'center'}}>
-      <div style={{marginBottom: '0'}}>官方企业微信群</div>
-      <img src="/images/企业微信群二维码.png" alt="企业微信群二维码" style={{width: '175px', height: 'auto', marginTop: '0'}} />
-    </div>
-  </div>
-</div>
-</div>
+**反馈建议**  
+有任何建议或意见？欢迎通过反馈渠道告诉我们。
+
+**商务合作**  
+如需商务合作，请联系我们的商务团队。
+
+💡 **提示**：建议先阅读帮助文档和新手教程，大部分问题都可以在文档中找到答案。
