--- a/my-app/content/docs/使用指南/了解新手教程.mdx
+++ b/my-app/content/docs/使用指南/了解新手教程.mdx
@@ -3,22 +3,60 @@ title: 了解新手教程
 
 ---
 
-## 功能概述
+Zleap 提供了完整的新手教程，帮助你快速上手。无论你是第一次使用，还是想深入了解某个功能，都可以在新手教程中找到答案。
 
-<div style={{ textAlign: 'justify' }}>
+## 访问新手教程
 
-“了解新手教程”是 Zleap 为新人量身打造的引导使用功能。该功能通过系统性的指引，帮助您快速熟悉 Zleap 的核心板块与基础操作，从而更顺畅地开始使用各项服务。
+### 网页版
 
-## 访问入口
+登录 Zleap 后，在首页可以看到 **新手教程** 入口。
 
-打开 Zleap首页（网址：<a href="https://app.zleap.com.cn/" target="_blank" style={{color: '#1890ff', textDecoration: 'none'}}>app.zleap.com.cn</a>），登录账户，在界面右下角找到“了解新手教程”按钮，点击后即可跟随交互式指引，逐步学习关键功能的使用方法。
+<img src="/images/了解新手教程.png" alt="了解新手教程" width="700" style={{marginTop: '2px'}} />
 
-<img src="/images/了解新手教程.png" alt="了解新手教程" width="900" style={{marginTop: '2px'}} />
+点击进入，即可查看完整的新手教程。
 
-目前，新手教程涵盖以下主要板块，每个板块均提供对应的实操指引。
+## 教程内容
 
-### 信息管理
+新手教程包含以下内容：
 
-信息管理板块的教程将指导您订阅公共频道、创建个人化信息源，并系统建立专属信息资料库。您可进入“信息管理”板块，在左下方找到“如何使用信息管理”按钮，点击即可开始学习相关操作。
+**快速上手**  
+从创建信息源到生成首份报告的完整流程，5 分钟快速体验 Zleap。
 
-</div>
+**信息管理**  
+如何创建、管理和优化信息源，让 AI 获取高质量的数据。
+
+**报告助手**  
+如何使用报告助手自动生成报告，节省大量人工整理时间。
+
+**搜索助手**  
+如何使用搜索助手快速找到需要的信息，告别传统关键词搜索。
+
+**问答助手**  
+如何使用问答助手向你的数据提问，获取精准、可溯源的答案。
+
+**高级技巧**  
+如何优化提示词、选择合适的模板、设置定时任务等高级功能。
+
+## 互动教程
+
+新手教程采用互动式设计：
+
+**分步指引**  
+每个步骤都有详细的说明和截图，跟着教程操作即可完成。
+
+**实时反馈**  
+完成每个步骤后，系统会给出实时反馈，确认你的操作是否正确。
+
+**随时跳过**  
+如果你已经熟悉某个功能，可以随时跳过该部分教程。
+
+**重新学习**  
+你可以随时重新查看教程，复习已学内容。
+
+## 使用技巧
+
+💡 **边学边做**：建议边看教程边操作，实践是最好的学习方式。
+
+💡 **完成任务**：教程中会设置一些小任务，完成任务可以加深理解。
+
+💡 **收藏重点**：将重要的教程页面收藏，方便后续查阅。
