--- a/my-app/content/docs/实践教程/如何使用信息管理？/信息源日志.mdx
+++ b/my-app/content/docs/实践教程/如何使用信息管理？/信息源日志.mdx
@@ -3,4 +3,81 @@ title: 信息源日志
 
 ---
 
-# 
+信息源日志记录了信息源的采集状态和历史记录。通过查看日志，你可以了解信息源是否正常工作，及时发现和解决问题。
+
+## 查看日志
+
+### 1. 进入信息管理
+
+登录 Zleap 后，点击首页的 **信息管理**，进入信息源管理页面。
+
+### 2. 选择信息源
+
+找到你要查看日志的信息源，点击信息源卡片。
+
+### 3. 查看日志
+
+在信息源详情页，点击 **日志** 标签，查看信息源的采集日志。
+
+## 日志内容
+
+日志记录包含以下信息：
+
+**时间**  
+采集操作的时间。
+
+**状态**  
+采集状态：
+- 成功：信息采集成功
+- 失败：信息采集失败
+- 进行中：正在采集信息
+
+**采集数量**  
+本次采集到的信息数量。
+
+**错误信息**  
+如果采集失败，会显示具体的错误信息和原因。
+
+**操作类型**  
+操作类型：
+- 自动采集：按照设定的频率自动采集
+- 手动触发：用户手动触发的采集
+- 初始化：首次创建信息源时的采集
+
+## 常见问题
+
+### 采集失败
+
+如果日志显示采集失败，可能的原因：
+
+- RSS 链接无效或网站无法访问
+- 网络连接问题
+- 文档格式不支持
+- 权限不足（例如飞书群权限）
+
+**解决方法：**
+- 检查信息源配置是否正确
+- 尝试手动触发采集
+- 更新信息源配置
+- 联系客服获取技术支持
+
+### 采集数量为 0
+
+如果日志显示采集成功但数量为 0，可能的原因：
+
+- 信息源没有新内容
+- 信息源的内容格式不符合要求
+- 过滤条件过于严格
+
+**解决方法：**
+- 检查信息源是否有新内容
+- 调整过滤条件
+- 查看信息源详情，确认内容是否正常
+
+## 使用技巧
+
+💡 **定期检查**：定期查看日志，确保信息源正常工作。
+
+💡 **错误排查**：如果报告生成失败，先查看信息源日志，排查是否是信息源问题。
+
+💡 **性能优化**：如果采集时间过长，可以调整采集频率或优化信息源配置。
