--- a/my-app/content/docs/实践教程/如何使用报告助手？/创建报告任务.mdx
+++ b/my-app/content/docs/实践教程/如何使用报告助手？/创建报告任务.mdx
@@ -3,4 +3,51 @@ title: 创建报告任务
 
 ---
 
-# 
+创建报告任务是使用报告助手的第一步。通过创建任务，AI 将自动从你的信息源中生成定制化报告。
+
+## 操作步骤
+
+### 1. 进入报告助手
+
+登录 Zleap 后，点击首页的 **报告助手**，进入报告管理页面。
+
+### 2. 创建报告任务
+
+点击左侧菜单的 **创建报告任务**，系统将弹出任务创建页面。
+
+### 3. 选择信息源
+
+在弹出页面中，选择你要生成报告的信息源。你可以选择一个或多个信息源。
+
+选择完成后，点击页面空白处激活 **下一步** 按钮，点击进入下一步。
+
+### 4. 配置报告参数
+
+在配置页面中，你需要设置以下参数：
+
+**报告模板**  
+选择报告格式：卡片模板、长文模板或事项模板。不同模板适用于不同场景。
+
+**提示词**  
+输入你对报告的具体要求，例如"重点关注技术趋势"或"总结关键数据"。
+
+**报告风格**  
+选择报告的语言风格，如专业、简洁或详细。
+
+**执行方式**  
+- **单次立即执行**：立即生成一次报告
+- **定时执行**：设置定时任务，定期自动生成报告
+
+### 5. 创建任务
+
+配置完成后，点击 **创建** 按钮，系统将开始生成报告。
+
+你可以在 **任务管理** 中查看报告生成状态和历史记录。
+
+## 使用技巧
+
+💡 **合理使用提示词**：提示词越具体，报告质量越高。例如"总结本周技术动态，重点关注 AI 领域"。
+
+💡 **选择合适的模板**：卡片模板适合快速浏览，长文模板适合深度分析，事项模板适合任务管理。
+
+💡 **定时任务**：对于需要定期关注的信息源，建议设置定时任务，自动生成报告。
