--- a/my-app/content/docs/实践教程/如何使用问答助手？/使用专属问答助手.mdx
+++ b/my-app/content/docs/实践教程/如何使用问答助手？/使用专属问答助手.mdx
@@ -3,4 +3,45 @@ title: 使用专属问答助手
 
 ---
 
-# 
+创建问答助手后，你就可以像聊天一样向它提问。AI 会基于你的信息源，提供精准、可溯源的答案。
+
+## 操作步骤
+
+### 1. 进入问答助手
+
+登录 Zleap 后，点击首页的 **问答助手**，进入问答助手页面。
+
+### 2. 选择问答助手
+
+在问答助手列表中，点击你要使用的问答助手。
+
+### 3. 开始提问
+
+在输入框中输入你的问题，然后按回车或点击发送按钮。
+
+**提问技巧：**
+- 用自然语言提问，就像和人聊天一样
+- 问题尽量具体明确，例如"产品的主要功能有哪些？"而不是"功能"
+- 可以进行多轮对话，AI 会记住上下文
+
+### 4. 查看答案
+
+AI 会分析你的信息源，并给出答案。
+
+每个答案都会标注信息来源，你可以点击查看原始文档。
+
+### 5. 追问
+
+如果答案不够详细，你可以继续追问：
+
+- "能详细说明一下吗？"
+- "还有其他相关信息吗？"
+- "这个功能是如何实现的？"
+
+AI 会基于上下文，提供更深入的回答。
+
+### 6. 溯源验证
+
+点击答案中的来源链接，可以跳转到原始文档，验证信息的准确性。
+
+💡 **提示**：问答助手支持多轮对话，你可以像和专家交流一样，逐步深入了解问题。
