--- a/my-app/content/docs/实践教程/如何使用问答助手？/问答助手常见问题.mdx
+++ b/my-app/content/docs/实践教程/如何使用问答助手？/问答助手常见问题.mdx
@@ -3,4 +3,59 @@ title: 问答助手常见问题
 
 ---
 
-# 
+## AI 回答不准确怎么办？
+
+**Q：问答助手的回答与实际情况不符，怎么办？**
+
+A：可以尝试以下方法：
+
+- 调整问题，使其更具体明确
+- 检查信息源是否包含相关内容
+- 点击答案中的来源链接，验证原始文档
+- 追问 AI，要求提供更详细的信息
+
+## 如何验证答案的准确性？
+
+**Q：如何确保 AI 的回答是准确的？**
+
+A：Zleap 的问答助手提供答案溯源功能：
+
+- 每个答案都会标注信息来源
+- 点击来源链接，可以查看原始文档
+- 对比原始文档，验证答案的准确性
+- 如果发现错误，可以向 AI 追问或查看其他来源
+
+## 问答助手支持多轮对话吗？
+
+**Q：我可以连续提问吗？AI 会记住之前的对话吗？**
+
+A：是的。问答助手支持多轮对话：
+
+- AI 会记住对话上下文
+- 你可以使用"它"、"这个"等代词，AI 会理解你指的是什么
+- 可以逐步深入，从概括到细节
+- 每次对话都是独立的会话，切换问答助手会开始新的对话
+
+## 如何提高回答质量？
+
+**Q：如何让 AI 给出更好的回答？**
+
+A：以下技巧可以提高回答质量：
+
+- 问题尽量具体明确，避免过于宽泛
+- 提供上下文信息，例如"在产品文档中，如何..."
+- 使用完整的句子，而不是单个词汇
+- 如果答案不满意，可以追问或换个角度提问
+
+## 问答助手可以回答哪些问题？
+
+**Q：问答助手可以回答哪些类型的问题？**
+
+A：问答助手可以回答基于你信息源的各种问题：
+
+- 事实性问题：例如"产品的价格是多少？"
+- 解释性问题：例如"SAG 技术是如何工作的？"
+- 对比性问题：例如"A 方案和 B 方案有什么区别？"
+- 总结性问题：例如"这份报告的核心观点是什么？"
+
+⚠️ **注意**：问答助手只能回答基于你信息源的问题，无法回答超出信息源范围的内容。
