--- a/my-app/content/docs/使用指南/快速上手.mdx
+++ b/my-app/content/docs/使用指南/快速上手.mdx
@@ -19,7 +19,7 @@ title: 快速上手
 
 ### 1.1 点击信息管理
 
-登录 Zleap后，点击首页中的「信息管理」，进入信息源管理页面。
+登录 Zleap 后，点击首页中的「信息管理」，进入信息源管理页面。
 
 <img src="/images/点击信息管理.png" alt="点击信息管理" width="700" style={{marginTop: '2px'}} />
 
@@ -95,7 +95,7 @@ title: 快速上手
 
 在报告页面中，您还可通过右侧的AI 对话按钮，直接使用自然语言提问，AI 将基于报告内容进行精准解答。
 
-<img src="/images/AI报告.png" alt="AI报告" width="400" style={{marginTop: '2px'}} />
+<img src="/images/AI报告.jpg" alt="AI报告" width="400" style={{marginTop: '2px'}} />
 
 至此，您已完成 Zleap 从账户创建到报告生成的全流程。
 
