--- a/my-app/content/docs/使用指南/快速上手.mdx
+++ b/my-app/content/docs/使用指南/快速上手.mdx
@@ -19,33 +19,29 @@ title: 快速上手
 
 ### 1.1 点击信息管理
 
-登录 Zleap 后，点击首页中的「信息管理」，进入信息源管理页面。
+登录 Zleap 后，点击首页中的<strong style={{ fontWeight: 700 }}>「信息管理」</strong>，进入信息源管理页面。
 
-<img src="/images/点击信息管理.png" alt="点击信息管理" width="700" style={{marginTop: '2px'}} />
+然后，点击左侧菜单中的<strong style={{ fontWeight: 700 }}>「创建信息源」</strong>，点击<strong style={{ fontWeight: 700 }}>「文档上传」</strong>，通过上传的文档作为信息源类型。
 
-然后，点击左侧菜单中的「创建信息源」，点击「文档上传」，通过上传的文档作为信息源类型。
-
-<img src="/images/创建信息源.png" alt="创建信息源" width="700" style={{marginTop: '2px'}} />
+<img src="/images/点击信息管理.gif" alt="点击信息管理" style={{ maxWidth: '100%', height: 'auto' }} />
 
 ### 1.2 上传文档
 
-点击「文档上传」后，进入“上传信息源”页面。
+点击<strong style={{ fontWeight: 700 }}>「文档上传」</strong>后，进入“上传信息源”界面。
 
-- 点击「选择文件」，上传本地文档（目前支持格式：pdf、txt、md、docx、pptx；以及粘贴链接）；
-- 文件上传成功后，填写「信息名称」；
-- 填写完毕，点击右上方「提交信息」，完成上传。
+- 点击<strong style={{ fontWeight: 700 }}>「选择文件」</strong>，上传本地文档。目前，Zleap 支持 pdf、txt、md、docx、pptx等格式，以及粘贴网页链接。
+- 文件上传成功后，填写<strong style={{ fontWeight: 700 }}>「信息名称」</strong>；
+- 填写完毕，点击右上方<strong style={{ fontWeight: 700 }}>「提交信息」</strong>，完成上传。
 
-<img src="/images/上传信息源.png" alt="上传信息源" width="700" style={{marginTop: '2px'}} />
+<img src="/images/上传信息源.gif" alt="上传信息源" style={{ maxWidth: '100%', height: 'auto' }} />
 
 ### 1.3 关联应用
 
-信息提交成功后，系统将弹出关联应用页面，请点击「关联应用」。
+信息提交成功后，系统将弹出关联应用页面，请点击<strong style={{ fontWeight: 700 }}>「关联应用」</strong>。
 
-<img src="/images/关联应用.png" alt="关联应用" width="400" style={{marginTop: '2px'}} />
+并在弹出页面中选择<strong style={{ fontWeight: 700 }}>「报告助手」</strong>。
 
-并在弹出页面中选择「报告助手」。
-
-<img src="/images/关联报告助手.png" alt="关联报告助手" width="400" style={{marginTop: '2px'}} />
+<img src="/images/关联应用.gif" alt="关联应用" style={{ maxWidth: '100%', height: 'auto' }} />
 
 至此，您的信息源已创建完成。
 
@@ -59,15 +55,13 @@ title: 快速上手
 
 ### 2.1 选择信息源
 
-系统跳转到报告生成页面后，点击左侧「创建报告任务」，在弹出页面中选择您刚创建的信息源。
+系统跳转到报告生成页面后，点击左侧<strong style={{ fontWeight: 700 }}>「创建报告任务」</strong>，在弹出页面中选择您刚创建的信息源。
 
-<img src="/images/创建报告任务.png" alt="创建报告任务" width="700" style={{marginTop: '2px'}} />
+选择后，点击页面空白处激活<strong style={{ fontWeight: 700 }}>「下一步」</strong>按钮，并点击进入。
 
-选择后，点击页面空白处激活「下一步」按钮，并点击进入。
+<img src="/images/创建报告任务.gif" alt="创建报告任务" style={{ maxWidth: '100%', height: 'auto' }} />
 
-<img src="/images/创建报告任务-下一步.png" alt="下一步" width="400" style={{marginTop: '2px'}} />
-
-随后，系统会弹出一个“创建报告任务”页面。
+随后，系统会弹出一个<strong style={{ fontWeight: 700 }}>「创建报告任务」</strong>页面。
 
 ### 2.2 创建报告任务
 
@@ -77,17 +71,17 @@ title: 快速上手
 - 输入相关的提示词
 - 选择喜欢的报告风格
 
-由于本次教程的信息源为上传的文档，所以执行方式选择「单次立即执行」即可。
+由于本次教程的信息源为上传的文档，所以执行方式选择<strong style={{ fontWeight: 700 }}>「单次立即执行」</strong>即可。
 
-完成相关配置后，点击「创建」，系统将开始自动生成报告。
+完成相关配置后，点击<strong style={{ fontWeight: 700 }}>「创建」</strong>，系统将开始自动生成报告。
 
-<img src="/images/创建报告任务-选择.png" alt="创建报告任务" width="400" style={{marginTop: '2px'}} />
+<img src="/images/创建报告任务-选择.gif" alt="创建报告任务" style={{ maxWidth: '100%', height: 'auto' }} />
 
 ### 2.3 生成报告
 
 系统将在短时间内完成报告生成。
 
-报告生成后，您可在左侧导航栏的「任务管理」中查看所有报告及状态。
+报告生成后，您可在左侧导航栏的<strong style={{ fontWeight: 700 }}>「任务管理」</strong>中查看所有报告及状态。
 
 <img src="/images/任务管理.png" alt="任务管理" width="400" style={{marginTop: '2px'}} />
 
