--- a/my-app/content/docs/使用指南/快速上手.mdx
+++ b/my-app/content/docs/使用指南/快速上手.mdx
@@ -83,13 +83,11 @@ title: 快速上手
 
 报告生成后，您可在左侧导航栏的<strong style={{ fontWeight: 700 }}>「任务管理」</strong>中查看所有报告及状态。
 
-<img src="/images/任务管理.png" alt="任务管理" width="400" style={{marginTop: '2px'}} />
+点击对应的报告卡片，即可进入报告详情页，查阅由 Zleap 生成的完整智能报告。
 
-点击对应的报告卡片，即可进入报告详情页，查阅由 Zleap 生成的完整 AI 智能报告。
+在报告页面中，您还可通过右侧的 AI 对话按钮，直接使用自然语言提问，AI 将基于报告内容进行精准解答。
 
-在报告页面中，您还可通过右侧的AI 对话按钮，直接使用自然语言提问，AI 将基于报告内容进行精准解答。
-
-<img src="/images/AI报告.jpg" alt="AI报告" width="400" style={{marginTop: '2px'}} />
+<img src="/images/AI报告.gif" alt="AI报告" style={{ maxWidth: '100%', height: 'auto' }} />
 
 至此，您已完成 Zleap 从账户创建到报告生成的全流程。
 
