--- a/my-app/content/docs/使用指南/语言选择.mdx
+++ b/my-app/content/docs/使用指南/语言选择.mdx
@@ -1,9 +1,12 @@
 ---
 title: 语言选择
 ---
+
 <div style={{ textAlign: 'justify' }}>
 
-Zleap 目前支持简体中文与 English，您可以根据个人偏好与所在地区随时更改。
+## 功能概述
+
+Zleap 提供完整的界面语言切换功能，旨在为全球用户与团队提供更友好、个性化的产品使用体验。目前，Zleap 支持简体中文与 English，您可以根据个人偏好与所在地区随时更改。
 
 ## 操作步骤
 
