--- a/my-app/content/docs/使用指南/Zleap介绍/Zleap是什么.mdx
+++ b/my-app/content/docs/使用指南/Zleap介绍/Zleap是什么.mdx
@@ -23,39 +23,39 @@ Zleap 的三大核心技术体现在：
 
 Zleap 不仅是一个智能检索、智能报告工具，更是一个为企业、个人及 Agent 提供确定性信息支撑的基座平台。与其它 AI 相比，Zleap 有独特的优势：
 
-### 软硬算力融合
+### 1. 软硬算力融合
 
 Zleap 通过全栈技术融合，将算力与定制软件集成于单一设备，构成即开即用的微型 AI 中枢，为您免去额外的算力部署成本。
 
-### 小模型优化降本
+### 2. 小模型优化降本
 
 Zleap 对小模型进行深度优化，确保高性能的同时降低硬件成本，让企业与个人能以更低门槛享受高效 AI 服务。
 
-### 核心自研增效
+### 3. 核心自研增效
 
 依托自研的 Agent 与 SAG 技术，Zleap 能以低成本快速处理海量繁杂信息，直接赋能企业决策，提升运营效率。
 
-### 彻底杜绝幻觉
+### 4. 彻底杜绝幻觉
 
 Zleap 能自动核查信息，且所有报告均支持界面溯源，确保了输出结果的真实性与准确性。
 
-### 数据离线安保
+### 5. 数据离线安保
 
 Zleap 一体机支持完全离线运行，确保数据处理均在本地完成，为企业敏感信息构筑安全防线，杜绝泄露风险。
 
-### 数据权限清晰
+### 6. 数据权限清晰
 
 我们提供强大的人员与数据权限管理系统，助力企业精细化管控数据访问，强化内部隐私保护与合规性。
 
-### 多机互联扩容
+### 7. 多机互联扩容
 
 Zleap 支持多设备灵活互联，实现算力的快速扩展，适配从初创团队到大型企业的不同规模算力需求。
 
-### 算力拓展生态
+### 8. 算力拓展生态
 
 Zleap 基于本地算力底座，灵活拓展其他 AI 功能，助力企业构建定制化、可持续的 AI 服务生态，满足多样需求。
 
-### 配件协同闭环
+### 9. 配件协同闭环
 
 在未来，Zleap 将通过连接多样化的专用硬件配件，持续扩展生态边界，形成覆盖更广的 AI 解决方案闭环，提供一站式服务。
 
