--- a/my-app/content/docs/使用指南/动态与公告/更新日志.mdx
+++ b/my-app/content/docs/使用指南/动态与公告/更新日志.mdx
@@ -8,6 +8,21 @@ title: 更新日志
 
 通过此日志，您可以快速了解 Zleap 的最新改进、功能增强以及技术升级，从而更高效地利用平台能力，优化使用体验。我们持续聆听用户反馈，致力于通过快速、敏捷的迭代，让 Zleap 更贴合您的工作流与业务场景。
 
+### V0.1.14 主要更新
+更新时间 2025.12.24
+
+<strong style={{ fontWeight: 700 }}>新增</strong>
+1. 新增信息源-多维表单。
+2. 新增笔记信息源-查看解析块页面。
+3. 新增浏览器插件。
+4. 新增文件上传支持纯图片格式解析。
+
+<strong style={{ fontWeight: 700 }}>优化</strong>
+1. 优化笔记信息源样式与来源渲染。
+2. 优化信息源列表筛选组件。
+3. 优化浏览器插件单点登录以及相关跳转。
+4. 修复了一些Bug，提升用户体验。
+
 ### V0.1.13 主要更新
 更新时间 2025.12.17
 
