--- a/my-app/content/docs/实践教程/如何使用信息管理？/订阅公共频道信息.mdx
+++ b/my-app/content/docs/实践教程/如何使用信息管理？/订阅公共频道信息.mdx
@@ -18,7 +18,7 @@ title: 订阅公共频道信息
 
 <img src="/images/进入公共频道.gif" alt="进入公共频道" style={{ maxWidth: '100%', height: 'auto' }} />
 
-当前，公共频道已汇聚来自 AI、时政、商业、职场等领域的近千条优质信息源，持续为您提供高质量的公开信息。
+当前，公共频道已汇聚来自 AI、时政、商业、职场等领域的数千条优质信息源，持续为您提供高质量的公开信息。
 
 ### 2. 订阅公共频道
 
