--- a/my-app/content/docs/实践教程/如何使用信息管理？/订阅公共频道信息.mdx
+++ b/my-app/content/docs/实践教程/如何使用信息管理？/订阅公共频道信息.mdx
@@ -26,9 +26,11 @@ title: 订阅公共频道信息
 
 选择需订阅的频道，在对应频道卡片右侧点击<strong style={{ fontWeight: 700 }}>「订阅」</strong>按钮。
 
+Zleap 支持订阅多个频道，您可任意订阅喜欢的频道。
+
 <img src="/images/点击订阅.gif" alt="点击订阅" style={{ maxWidth: '100%', height: 'auto' }} />
 
-若想取消订阅，在订阅成功后，点击卡片右侧点击<strong style={{ fontWeight: 700 }}>「已订阅」</strong>按钮，即可取消订阅。
+若想取消订阅，在订阅成功后，点击卡片右侧<strong style={{ fontWeight: 700 }}>「已订阅」</strong>按钮，即可取消订阅。
 
 #### 2.2 查看订阅内容
 
